@startuml

skinparam linetype ortho

class BenchmarkRunner {
    + BenchmarkRunner(benchmark : BenchmarkDescription, config : ConnectionConfig)
    + run_benchmark() : dict(str, TestRun[])
}

class TestManager {
    - test_records : TestRecord[]
    + assign_test(test_name : str)
    + get_test_description(test_name : str)
    + all_tests_done() : bool
}

class TestRecord {
    - assigned : bool
    - done : bool
    - test_description : TestDescription
    - test_result : TestRun

    + __init__(test_description : TestDescription)
    + is_assigned() : bool
    + is_done() : bool
    + set_assigned()
    + set_done()
    + get_test_description() : TestDescription
    + get_test_result() : TestRun
}

interface ConnectionConfig {
    + get_socket_address() : str
}

class InProcessConfig {
    - name : str
    + IPCConfig(name : str)
}

class TCPConfig {
    - host : str
    - port : int
    + TCPConfig(host : str, port : str)
}
note bottom of TCPConfig : this is the default choice: tcp:\\\\*:9361

ConnectionConfig -u.. BenchmarkRunner : <<uses>>
InProcessConfig -u-|> ConnectionConfig
TCPConfig -u-|> ConnectionConfig


@enduml